--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-asfasfasf
+<script type= "text/javascript">
+function goToPage()
+{
+	var url = document.getElementById('id_Элемента');
+	document.location.href = url.value;
+}
+</script>
