--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <script type= "text/javascript">
 function goToPage()
 {
-	var url = document.getElementById('id_Элемента');
-	document.location.href = url.value;
+	document.location.href = 'https://ivan-dyadyura.github.io/test.github.io/app/';
 }
+	
+goToPage()
 </script>
